--- a/designer/settings_forecolor_bgcolor_class.ui
+++ b/designer/settings_forecolor_bgcolor_class.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>403</width>
-    <height>480</height>
+    <width>541</width>
+    <height>396</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,106 +30,97 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_10">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>styling of class</string>
+        <string>Color</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="1" column="1">
+      <widget class="QPushButton" name="pb_color">
+       <property name="text">
+        <string>... (click to change)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="3" column="1">
       <widget class="QCheckBox" name="cb_contextmenu_show">
        <property name="text">
-        <string>show in context menu</string>
+        <string>show in context menu and drop down button</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="4" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Text in Menu</string>
+        <string>Text in context menu</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="4" column="1">
       <widget class="QLineEdit" name="le_contextmenu_text"/>
      </item>
-     <item row="7" column="0">
+     <item row="5" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="5" column="1">
       <widget class="QCheckBox" name="cb_extrabutton_show">
        <property name="text">
         <string>show extra button</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="0">
+     <item row="6" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>text for extra button</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="6" column="1">
       <widget class="QLineEdit" name="le_extrabutton_text"/>
      </item>
-     <item row="9" column="0">
-      <widget class="QLabel" name="label_2">
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_7">
        <property name="text">
         <string>tooltip for extra button</string>
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="7" column="1">
       <widget class="QLineEdit" name="le_tooltip_text"/>
      </item>
      <item row="2" column="1">
-      <widget class="QPlainTextEdit" name="pte_style"/>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="le_classname"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_7">
+      <widget class="QPushButton" name="pb_color_nm">
        <property name="text">
-        <string>class</string>
+        <string>... (click to change)</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QPlainTextEdit" name="pte_style_nm"/>
-     </item>
-     <item row="3" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;styling of class for&lt;br&gt;
-night mode (leave&lt;br&gt;
-empty if you don't&lt;br&gt;
+        <string>&lt;html&gt;&lt;head/&gt;
+&lt;body&gt;
+Color in night mode&lt;br&gt;
+(leave empty if you don't&lt;br&gt;
 want different&lt;br&gt;
 settings for night&lt;br&gt;
-mode)&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QLineEdit" name="le_menu_group"/>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>Context Menu Group</string>
+mode)
+&lt;/body&gt;
+&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
