--- a/designer/settings_main_widgets.ui
+++ b/designer/settings_main_widgets.ui
@@ -70,6 +70,20 @@
         </widget>
        </item>
        <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Remove formatting key</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pb_class_undo">
+         <property name="text">
+          <string>click to set</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
