Clean up main gui a bit
* Reorder "Activate" and "Modify"
* Keep buttons from growing with other elements

--- a/designer/settings_main_widgets.ui
+++ b/designer/settings_main_widgets.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1361</width>
-    <height>711</height>
+    <width>1370</width>
+    <height>682</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -151,8 +157,8 @@
             <bool>true</bool>
            </property>
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-             <horstretch>2</horstretch>
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
@@ -165,16 +171,16 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pb_modify_active">
+          <widget class="QPushButton" name="pb_deactivate">
            <property name="text">
-            <string>Modify</string>
+            <string>Deactivate</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pb_deactivate">
+          <widget class="QPushButton" name="pb_modify_active">
            <property name="text">
-            <string>Deactivate</string>
+            <string>Modify</string>
            </property>
           </widget>
          </item>
@@ -184,6 +190,19 @@
             <string>Delete</string>
            </property>
           </widget>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </item>
@@ -249,6 +268,19 @@
             <string>Delete</string>
            </property>
           </widget>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </item>
