Replace custom shortcut dialog with QKeySequence

--- a/designer/settings_class.ui
+++ b/designer/settings_class.ui
@@ -23,13 +23,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pb_hotkeyset">
-       <property name="text">
-        <string>... (click to change)</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
@@ -139,6 +132,9 @@ mode)&lt;/body&gt;&lt;/html&gt;</string>
      </item>
      <item row="10" column="1">
       <widget class="QLineEdit" name="le_tooltip_text"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="QKeySequenceEdit" name="hotkey"/>
      </item>
     </layout>
    </item>
