--- a/designer/settings_forecolor_bgcolor_class.ui
+++ b/designer/settings_forecolor_bgcolor_class.ui
@@ -23,13 +23,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pb_hotkeyset">
-       <property name="text">
-        <string>... (click to change)</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -123,6 +116,9 @@ mode)
 &lt;/html&gt;</string>
        </property>
       </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QKeySequenceEdit" name="hotkey"/>
      </item>
     </layout>
    </item>
